# trades

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
etl/: __init__.py  extract.py  load.py  run_etl.py  transform.py
reporting/: __init__.py  plot.py  run_reporting.py  top_clients.py
